prod/Voice-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voice-ingress
  namespace: voice
spec:
  ingressClassName: "nginx"
  rules:
  - host: "voice.kunde100.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voice-app-service
            port:
              number: 80
